--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -200,7 +200,7 @@
 
     <div class="contact-info">
         <p>If you have questions about this Privacy Policy or our data practices, please contact us:</p>
-        <p><strong>Email:</strong> [YOUR-EMAIL@DOMAIN.COM]</p>
+        <p><strong>Email:</strong> decocobynj2025@gmail.com</p>
         <p><strong>Developer:</strong> DeCoCo</p>
         <p><strong>App:</strong> Flappie</p>
         <p><strong>Response Time:</strong> We typically respond within 48 hours</p>
